--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,17 @@
             <artifactId>telegrambots</artifactId>
             <version>5.1.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.10</version>
+        </dependency>
 
-       <!-- <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>${telegrambot.starter.version}</version>
-        </dependency> -->
+        <!-- <dependency>
+             <groupId>org.telegram</groupId>
+             <artifactId>telegrambots-spring-boot-starter</artifactId>
+             <version>${telegrambot.starter.version}</version>
+         </dependency> -->
     </dependencies>
 </project>
